--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "“MOS Burgers” is locally-owned medium scale business that specialize in selling a wide variety of burgers, submarines and soft drinks. On an average day, the shop serves between 50-60 customers. Additionally, Vito’s Burger shop offers various promotional deals and discounts to their customers to enhance their dining experience.",
   "main": "index.js",
   "scripts": {
-    "compile:sass":"sass --watch scss:asset/css"
+    "compile:sass": "sass --watch scss:asset/css"
   },
   "keywords": [
     "MOS",
@@ -18,6 +18,7 @@
     "sass": "^1.69.5"
   },
   "dependencies": {
-    "bootstrap": "^5.3.2"
+    "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.2"
   }
 }
